feat(terminal): EHEALTH TERMINAL AUTHENTICATE ADD (P2=03/04) and RESET ICC card-type status
Implement the two-phase ADD flow of EHEALTH TERMINAL AUTHENTICATE
(gemSpec_KT 3.7.2, SEQ_KT_0003/0004), which binds an additional
Konnektor to an existing pairing block's shared secret:

- ADD Phase 1 (P2=03): draw an Le-byte challenge from the SM-KT RNG,
  enter the per-connection "EHEALTH EXPECT CHALLENGE RESPONSE" state
  (30s timeout, entered only by P2=03, dropped by any command other
  than P2=04), and return the challenge.
- ADD Phase 2 (P2=04): validate the Shared Secret Response DO (0xD6,
  32 bytes), recompute SHA-256(challenge || secret) over every pairing
  block, and on a unique match bind the Konnektor's TLS key to that
  block (idempotent / append / evict-oldest at capacity 3; move the key
  out of any other block first).

Supporting changes:
- TerminalIdentity.randomBytes (default SecureRandom; gSMC-KT override
  via GET CHALLENGE with fallback).
- PairingStore.all()/update(); PairingBlock key-binding rules.
- SicctMessage.getLe().

Also fix SICCT RESET CT / ICC (5.12.6): SW2 now encodes the card type
after reset — a RESET addressed to an ICC slot returns 9001 for an
asynchronous (processor) chipcard (64A1 when the slot is empty), while
a RESET addressed to the terminal (FU 0) returns 9000.

Includes in-flight terminal scaffolding (session registry, card
presence monitor, events) and the gemSpec_KT / SICCT reference specs.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>